# esp32-p4-keepass-fido

./: CMakeLists.txt  README.md  agent.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
canokey-core/: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  FIDO2 Conformance Testing.json  README.md
canokey-core/.github/workflows/: test-openpgp.sh  test-piv.sh  tests.yml
canokey-core/applets/admin/: admin.c
canokey-core/applets/ctap/: cose-key.h  ctap-errors.h  ctap-internal.h  ctap-parser.c  ctap-parser.h  ctap.c  secret.c  secret.h  u2f.c  u2f.h
canokey-core/applets/ndef/: ndef.c
canokey-core/applets/oath/: oath.c
canokey-core/applets/openpgp/: openpgp.c
canokey-core/applets/pass/: pass.c
canokey-core/applets/piv/: piv.c
canokey-core/canokey-crypto/src/: ml-dsa-65.c  sm3.c
canokey-core/canokey-crypto/tf-psa-crypto/: CMakeLists.txt  README.md  SECURITY.md
canokey-core/canokey-crypto/tf-psa-crypto/.github/: pull_request_template.md
canokey-core/canokey-crypto/tf-psa-crypto/ChangeLog.d/: doxygen-build-folder.txt  issue784.txt
canokey-core/canokey-crypto/tf-psa-crypto/core/: psa_crypto.c
canokey-core/canokey-crypto/tf-psa-crypto/doxygen/: tfpsacrypto.doxyfile.in
canokey-core/canokey-crypto/tf-psa-crypto/drivers/: CMakeLists.txt
canokey-core/canokey-crypto/tf-psa-crypto/drivers/builtin/include/mbedtls/private/: crypto_builtin_composites.h
canokey-core/canokey-crypto/tf-psa-crypto/drivers/pqcp/src/: fips202_psa.h  psa_crypto_mldsa.c  psa_crypto_mldsa.h  wrap_mldsa_native.c
canokey-core/canokey-crypto/tf-psa-crypto/include/psa/: crypto.h  crypto_config.h  crypto_driver_contexts_composites.h  crypto_struct.h
canokey-core/canokey-crypto/tf-psa-crypto/include/tf-psa-crypto/private/: crypto_adjust_config_dependencies.h
canokey-core/canokey-crypto/tf-psa-crypto/scripts/: c_header_guards.py  config.py  generate_config_checks.py
canokey-core/canokey-crypto/tf-psa-crypto/scripts/data_files/: config-options-current.txt
canokey-core/canokey-crypto/tf-psa-crypto/scripts/data_files/driver_jsons/: driverlist.json  pqcp_driver.json
canokey-core/canokey-crypto/tf-psa-crypto/scripts/data_files/driver_templates/: psa_crypto_driver_wrappers.h.jinja
canokey-core/canokey-crypto/tf-psa-crypto/scripts/maintainer/: generate_mldsa_tests.py
canokey-core/canokey-crypto/tf-psa-crypto/scripts/project_knowledge/: __init__.py  tf_psa_crypto_test_case_info.py
canokey-core/canokey-crypto/tf-psa-crypto/tests/scripts/: analyze_outcomes.py  components-build-system.sh  components-configuration-crypto.sh  components-configuration.sh  generate_tests_pk_can_do_psa.py  tf_psa_crypto_test_case_info.py
canokey-core/canokey-crypto/tf-psa-crypto/tests/suites/: test_suite_config.crypto_combinations.data  test_suite_dispatch_transparent.dilithium_py.data  test_suite_dispatch_transparent.function  test_suite_dispatch_transparent.sign.data  test_suite_pk.function  test_suite_pqcp_mldsa.function  test_suite_pqcp_mldsa.misc.data  test_suite_psa_crypto.function  test_suite_psa_crypto_driver_wrappers.function  test_suite_psa_crypto_mldsa.dilithium_py.data  test_suite_psa_crypto_mldsa.function  test_suite_psa_crypto_mldsa.multipart.data  test_suite_psa_crypto_pake.function
canokey-core/fuzzer/: honggfuzz-fuzzer.c
canokey-core/include/: admin.h  apdu.h  applet-scratch.h  applets.h  common.h  ctap.h  device-config.h  device.h  fs.h  key.h  ndef.h  nfc.h  openpgp.h  pass.h  pin.h  piv.h  pke.h  platform-config.h
canokey-core/interfaces/NFC/: fm.c  nfc.c
canokey-core/interfaces/USB/class/ccid/: ccid.c  ccid.h  usbd_ccid.c
canokey-core/interfaces/USB/class/ctaphid/: ctaphid.c  ctaphid.h  usbd_ctaphid.c  usbd_ctaphid.h
canokey-core/interfaces/USB/class/kbdhid/: kbdhid.c  kbdhid.h
canokey-core/interfaces/USB/class/webusb/: webusb.c
canokey-core/interfaces/USB/core/inc/: usbd_core.h  usbd_ctlreq.h  usbd_def.h  usbd_ioreq.h
canokey-core/interfaces/USB/core/src/: usbd_core.c  usbd_ctlreq.c  usbd_ioreq.c
canokey-core/interfaces/USB/device/: usb_device.c  usb_device.h  usbd_canokey.c  usbd_canokey.h  usbd_desc.c
canokey-core/scripts/: gen_ctap_get_info.py  gen_git_rev_header.cmake
canokey-core/src/: apdu.c  applets.c  device.c  fs.c  key.c  pin.c  pke.c  platform-config.c
canokey-core/test/: CMakeLists.txt  test_apdu.c  test_core_helpers.c  test_key.c  test_oath.c  test_openpgp.c  test_piv.c
canokey-core/test-real/: .gitignore  macos-common.sh  test-macos-gpg.sh  test-macos-piv.sh  test-macos.sh
canokey-core/test-via-pcsc/: Dockerfile  Dockerfile.fido-local  admin_test.go  build_fido_tests.sh  build_gpg.sh  fido2_SM2_COSE_key.patch  fido2_retry_ctap2_init.patch  install_fido_tests.sh  install_gpg.sh  ndef_test.go  oath_test.go  openpgp_test.go  piv_test.go  run-fido-ci-local.sh
canokey-core/tinycbor/: .tag
canokey-core/virt-card/: device-sim.c  fabrication.c  fabrication.h  fido-hid-over-udp.c  ifdhandler.c  usb-dummy.h
canokey-port/: CMakeLists.txt  canokey_esp32p4_port.c  port_crypto.c  port_ecc_debug.c  port_flash.c  port_fs_debug.c  port_random.c  port_time.c  port_ui.c  port_usb.c
canokey-port/include/: canokey_esp32p4.h  mldsa_native.h
components/crypto_test/: CMakeLists.txt  test_aes.c  test_aes.h  test_ecc.c  test_ecc.h  test_ecdsa_sign.c  test_ecdsa_sign.h  test_ecdsa_verify.c  test_ecdsa_verify.h  test_hmac_sha256.c  test_hmac_sha256.h  test_public_key_verify.c  test_public_key_verify.h  test_random.c  test_random.h  test_sha256.c  test_sha256.h
main/: CMakeLists.txt  FT6336.c  FT6336.h  hello_world_main.c  idf_component.yml  usb_hid_keyboard.c  usb_hid_keyboard.h
main/kdbx/: kdbx_header.c  kdbx_internal.h  kdbx_kdf.c  kdbx_loader.c  kdbx_loader.h  kdbx_payload.c  kdbx_variant.c
main/lcd/: lcd_driver.c  lcd_driver.h
main/ui/: FIDO_Management.c  FIDO_Management.h  Serach_UI.c  Serach_UI.h  UI_SCREEN1.c  UI_SCREEN1.h  UI_SCREEN2.c  UI_SCREEN2.h  setup_ui.md  ui_fido_confirm.c  ui_fido_confirm.h  ui_nav.c  ui_nav.h  ui_password_detail.c  ui_password_detail.h  ui_password_manager.c  ui_password_manager.h
(+10 files in other folders)
